--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 </head>
 <body>
-
+	<div class="loading">
+		<h1 class="text"></h1>
+	</div>
 	<script type="text/javascript" src="script/lib/three.min.js"></script>
 	<script type="text/javascript" src="script/lib/OrbitControls.js"></script>
 
